--- a/style.css
+++ b/style.css
@@ -6,9 +6,9 @@ body, html {
 input[type=text] {
     width: 90%;
     display: flex;
-    margin: 5px auto;
-    border: 1px solid #ccc;
-    border-radius: 4px;
+    margin: 10px auto;
+    border: 1px solid #000;
+    border-radius: 8px;
     font-size: 2rem;
     text-align: right;
     color: transparent;
